fix styles of icons on mobile

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -10,14 +10,6 @@
   }
 }
 
-// .cursor-notAllowed {
-//   cursor: not-allowed;
-// }
-
-// .pointer-events-none {
-//   pointer-events: none;
-// }
-
 .bc-blue {
   background-color: #407AC7;
 
@@ -25,6 +17,7 @@
     position: fixed;
     height: 100%;
     width: 100%;
+    z-index: 999999;
 
     .container-fluid {
       .navbar-expand-sm {
@@ -88,71 +81,6 @@
   a {
     color: #fff !important;
   }
-}
-
-.menuToggle {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 7%;
-  right: 5%;
-  z-index: 1;
-  -webkit-user-select: none;
-  user-select: none;
-
-  &.close {
-    top: 3% !important;
-  }
-
-  input {
-    display: flex;
-    width: 40px;
-    height: 32px;
-    position: absolute;
-    cursor: pointer;
-    opacity: 0;
-    z-index: 2;
-
-    a {
-      text-wrap: wrap;
-    }
-  }
-
-  span {
-    display: flex;
-    width: 27px;
-    height: 2px;
-    margin-bottom: 5px;
-    position: relative;
-    background: #36383F;
-    border-radius: 12px;
-    z-index: 1;
-    transform-origin: 16.65px 2px;
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-
-    &:first-child {
-      transform-origin: 0% 0%;
-    }
-  }
-}
-
-.menuToggle .menuToggle span .menuToggle span:nth-last-child(2) {
-  transform-origin: 0% 100%;
-}
-
-.menuToggle input:checked~span {
-  opacity: 1;
-  transform: rotate(45deg) translate(-3px, -1px);
-  background: #36383F;
-}
-
-.menuToggle input:checked~span:nth-last-child(3) {
-  opacity: 0;
-  transform: rotate(0deg) scale(1, 1);
-}
-
-.menuToggle input:checked~span:nth-last-child(2) {
-  transform: rotate(-45deg) translate(0, -1px);
 }
 
 .menu {
